# Notes

./: App.cpp  App.h  CMakeLists.txt  ImportantNotesCollection.cpp  ImportantNotesCollection.h  Note.cpp  Note.h  NotesCollection.cpp  NotesCollection.h  Observer.h  Subject.h  main.cpp
test/: AppFixture.cpp  AppSuiteTest.cpp  CMakeLists.txt  ImportantNotesCollectionFixture.cpp  NotesCollectionFixture.cpp  NotesFixture.cpp  NotesSuiteTest.cpp  NotesTests.cpp  runAllTests.cpp
